--- a/index.html
+++ b/index.html
@@ -20,10 +20,30 @@
 
     <title>Boolzapp</title>
     <div id="_bg">
-        <body>
-    
+        <body id="_body" class="d-flex justify-content-center">
+            <div id="_container">
+               
+                <div class="row">
+                    <!-- colonna di sinistra -->
+                    <div class="col-4">
+                        <section id="_user-name-option"  class="d-flex justify-content-between align">
+                            <div id="_user-name"  class="d-flex align-items-center">
+                                <img src="img/avatar_io.jpg" alt="mia-foto">
+                                <div id="_nome-user">Federica</div>
+                            </div>
+                            <div id="_user-option">
+                                <i class="bi bi-arrow-counterclockwise"></i>
+                                <i class="bi bi-chat-right-dots"></i>
+                                <i class="bi bi-three-dots-vertical"></i>
+                            </div>
+                        </section>
+                    </div>
+                    <div class="col-6"></div>
+                </div>
 
+
+            </div>
         <script src="js/script.js"></script>
-    </body>
-</div>
+        </body>
+    </div>
 </html>
