sezione attiva notifiche

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                
                 <div class="row">
                     <!-- colonna di sinistra -->
-                    <div class="col-4">
+                    <div class="col-5">
+                        <!-- sezione user -->
                         <section id="_user-name-option"  class="d-flex justify-content-between align">
                             <div id="_user-name"  class="d-flex align-items-center">
                                 <img src="img/avatar_io.jpg" alt="mia-foto">
@@ -37,8 +38,19 @@
                                 <i class="bi bi-three-dots-vertical"></i>
                             </div>
                         </section>
+                        <!-- attivazione notifiche -->
+                        <section>
+                            <div id="_turn-notifications" class="d-flex align-items-center">
+                                <i class="bi bi-bell-slash"></i>
+                                <div id="_turn-on">
+                                    <div class="fs-8">Ricevi notifiche di nuovi messaggi</div>
+                                    <a href="#" id="_link-setting">Attiva le notifiche</a>
+                                </div>
+                            </div>
+                        </section>
+
                     </div>
-                    <div class="col-6"></div>
+                    <div class="col-7"></div>
                 </div>
 
 
