--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div id="_container">
                
                 <div class="row">
-                    <!-- colonna di sinistra -->
+                    <!-- right column -->
                     <div class="col-5">
-                        <!-- sezione user -->
+                        <!-- user section -->
                         <section id="_user-name-option"  class="d-flex justify-content-between align">
                             <div id="_user-name"  class="d-flex align-items-center">
                                 <img src="img/avatar_io.jpg" alt="mia-foto">
@@ -38,7 +38,8 @@
                                 <i class="bi bi-three-dots-vertical"></i>
                             </div>
                         </section>
-                        <!-- attivazione notifiche -->
+                        
+                        <!-- notifications -->
                         <section>
                             <div id="_turn-notifications" class="d-flex align-items-center">
                                 <i class="bi bi-bell-slash"></i>
@@ -46,6 +47,26 @@
                                     <div class="fs-8">Ricevi notifiche di nuovi messaggi</div>
                                     <a href="#" id="_link-setting">Attiva le notifiche</a>
                                 </div>
+                            </div>
+                        </section>
+
+                        <!-- search contact -->
+                        <section>
+                            <div class="input-group" id="_search-container">
+                                <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
+                                <input type="text" class="form-control" placeholder="Cerca tra contatti e messaggi">
+                            </div>
+                        </section>
+
+                        <!-- open chats -->
+                        <section>
+                            <div id="_chat-container">
+                                <!-- contact -->
+                                <div class="_contact d-flex">
+                                    <img src="img/avatar_1.jpg" alt="chat1">
+                                    <div class="_contact-name">Christian</div>    
+                                </div>
+
                             </div>
                         </section>
 
