--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <!-- left column -->
                     <div class="col-5">
                         <!-- user section -->
-                        <section id="_user-name-option"  class="d-flex justify-content-between align">
+                        <section id="_user-name-option"  class="d-flex justify-content-between">
                             <div id="_user-name"  class="d-flex align-items-center">
                                 <img src="img/avatar_io.jpg" alt="mia-foto">
                                 <div id="_nome-user">Federica</div>
@@ -72,9 +72,36 @@
 
                     </div>
 
+
                     <!-- right column -->
                     <div class="col-7">
                         <div id="_chat-container">
+                             
+                            <!-- header chat -->
+                            <section id="_chat-header">
+                                <div class="row justify-content-between align-items-center">
+                                    <div class="col" id="_header-icon">
+                                        <img src="img/avatar_1.jpg" alt="">
+                                        <span id="_receiver-name">Christian</span>
+                                    </div>
+                                    <div class="col d-flex justify-content-end" id="_chat-option">
+                                        <i class="bi bi-search"></i>
+                                        <i class="bi bi-link-45deg"></i>
+                                        <i class="bi bi-three-dots-vertical"></i>
+                                    </div>
+                                </div>
+                            </section>
+
+                            <!-- conversation section -->
+                            <section>
+                                <div id="_conversation"></div>
+                            </section>
+
+                            <!-- user chat input -->
+                            <section>
+                                <div id="_user-input"></div>
+                            </section>
+
 
                         </div>
                     </div>
