--- a/index.html
+++ b/index.html
@@ -99,7 +99,13 @@
 
                             <!-- user chat input -->
                             <section>
-                                <div id="_user-input"></div>
+                                <div id="_user-input">
+                                    <div class="input-group">
+                                        <a href="#"><i class="bi bi-emoji-kiss"></i></a>
+                                        <input type="text" class="form-control" id="_new-message" placeholder="Scrivi qui il tuo nuovo messaggio...">
+                                        <a href="#"><i class="bi bi-mic-fill"></i></a>
+                                      </div>
+                                </div>
                             </section>
 
 
