--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@
 
                             <!-- conversation section -->
                             <section>
-                                <div id="_conversation"></div>
+                                <div id="_conversation">
+                                    <div class="_user-message _message"> Ciao</div>
+                                    <div class="_receiver-message _message">ueeee</div>
+
+
+                                </div>
                             </section>
 
                             <!-- user chat input -->
