--- a/index.html
+++ b/index.html
@@ -95,9 +95,24 @@
                             <!-- conversation section -->
                             <section>
                                 <div id="_conversation">
-                                    <div class="_user-message _message"> Ciao</div>
-                                    <div class="_receiver-message _message">ueeee</div>
 
+                                    <!-- mine -->
+                                    <div class="d-flex justify-content-end pe-2"> 
+                                        <div class="_user-message _message"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim voluptatibus sapiente minima molestias! Repellendus provident architecto laudantium officia, molestias suscipit cupiditate ducimus iusto veritatis natus voluptatibus, dolores quos mollitia facere? </div> 
+                                    </div>
+
+                                    <!-- theirs -->
+                                    <div class="d-flex justify-content-start ps-2"> 
+                                    <div class="_receiver-message _message">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium veniam molestias commodi error, quod esse dignissimos cupiditate et praesentium, dolorem, quidem ratione magnam atque accusamus autem. Facere blanditiis sit doloremque.</div>
+                                    </div>
+
+                                    <div class="d-flex justify-content-end pe-2"> 
+                                        <div class="_user-message _message"> Ciao </div> 
+                                    </div>
+
+                                    <div class="d-flex justify-content-end pe-2"> 
+                                        <div class="_user-message _message"> Ciao </div> 
+                                    </div>
 
                                 </div>
                             </section>
