--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <section>
                                 <div class="input-group" id="_search-container">
                                     <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
-                                    <input type="text" class="form-control" placeholder="Cerca tra contatti e messaggi" v-model="searchByLetters">
+                                    <input type="text" class="form-control" placeholder="Cerca tra contatti" v-model="searchByLetters">
                                 </div>
                             </section>
 
@@ -68,7 +68,7 @@
                                 <div id="_conversation-container">
 
                                     <!-- single contact -->
-                                    <div class="_contact d-flex" v-for="(contact, index ) in filteredContacts"  v-if="contact.visible" @click="openChat(index)"> 
+                                    <div class="_contact d-flex" v-for="(contact, index) in filteredContacts"  v-if="contact.visible" @click="openChat(index)"> 
                                         <img v-bind:src="'img/avatar' + contact.avatar +'.jpg'" :alt="contact.name + 'photo'" > 
                                         <div class="_contact-name" v-text="contact.name"></div>    
                                     </div>
